--- a/ClientApp/src/app/Forms/Dialog/confirmation-dialog/error-dialog.component.html
+++ b/ClientApp/src/app/Forms/Dialog/confirmation-dialog/error-dialog.component.html
@@ -1,9 +1,11 @@
-<mat-dialog-content>
-  <p>
-    {{message}}
-  </p>
-</mat-dialog-content>
-<mat-dialog-actions align="center">
-  <button mat-raised-button color="danger" (click)="onConfirmClick()" tabindex="1">{{confirmButtonText}}</button>
- 
-</mat-dialog-actions>
+<md-dialog class="error-message">
+  <h2>Warning</h2>
+  <mat-dialog-content>
+    <p>
+      {{message}}
+    </p>
+  </mat-dialog-content>
+  <mat-dialog-actions align="center">
+    <button mat-raised-button color="danger" (click)="onConfirmClick()" tabindex="1">{{confirmButtonText}}</button>  
+  </mat-dialog-actions>
+</md-dialog>
