--- a/ClientApp/src/app/Forms/Dialog/confirmation-dialog/confirmation-dialog.component.html
+++ b/ClientApp/src/app/Forms/Dialog/confirmation-dialog/confirmation-dialog.component.html
@@ -1,9 +1,14 @@
-<mat-dialog-content>
-  <p>
-    {{message}}
-  </p>
-</mat-dialog-content>
-<mat-dialog-actions align="center">
-  <button mat-raised-button color="primary" (click)="onConfirmClick()" tabindex="1">{{confirmButtonText}}</button>
-  <button mat-raised-button mat-dialog-close tabindex="-1">{{cancelButtonText}}</button>
-</mat-dialog-actions>
+<md-dialog class="error-message">
+  <h2><mat-icon>check_circle_outline</mat-icon> Confirmation</h2>
+  <div class="content">
+    <mat-dialog-content>
+      <p>
+        {{message}}
+      </p>
+    </mat-dialog-content>
+    <mat-dialog-actions align="center">
+      <button mat-raised-button color="primary" (click)="onConfirmClick()" tabindex="1">{{confirmButtonText}}</button>
+      <button mat-raised-button color="warn" mat-dialog-close tabindex="-1">{{cancelButtonText}}</button>
+    </mat-dialog-actions>
+  </div>
+</md-dialog>
