--- a/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
+++ b/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
@@ -4,7 +4,7 @@
     <form [formGroup]="personalForm" (ngSubmit)="onSubmit(personalForm.value)" fxLayout="row wrap" class="user-form">
       <div class="tab-party-details-parent">
         <div class="white-block pb-5">
-          <h3>Account</h3>
+          <h3><span>Account</span></h3>
           <div fxFlex="100" fxFlex.gt-sm="12" fxFlex.sm="12">
             <mat-form-field appearance="outline">
               <mat-label>Short Code</mat-label>
