--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -105,19 +105,20 @@ $material-icons-font-path: '~material-icons/iconfont/';
     }
 
     .mat-dialog-container {
+        background: #fcfcfc;
         padding: 0;
         .heading {
-            background: #ffd740;
-            color: rgba(0, 0, 0, 0.75);
+            background: #00695c;
+            color: #fff;
             font-size: 18px;
-            padding: 12px 15px;;
+            padding: 12px 15px;
             font-weight: 500;
         }
         .user-form {
-            padding: 15px;
+            padding: 0 15px 15px 15px;
         }
         .mat-tab-group {
-            padding: 15px;
+            padding: 0 15px 15px 15px;
             .user-form {
                 padding: 0;
             }
@@ -171,13 +172,25 @@ $material-icons-font-path: '~material-icons/iconfont/';
         margin-top: 10px;
     }
     h3 {
-        background: #fff;
         position: absolute;
         color: #00695c;
         font-size: 14px;
-        padding: 5px;
-        top: -15px;
+        padding: 0 5px;
+        top: -10px;
         left: 15px;
+        span {
+            position: relative;
+        }
+        &::before {
+            content: '';
+            background: #fff;
+            width: 100%;
+            height: 12px;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            display: block;
+        }
     }
 }
 
