--- a/ClientApp/src/app/Forms/Master/sauda/sauda-dialog/add-sauda.component.html
+++ b/ClientApp/src/app/Forms/Master/sauda/sauda-dialog/add-sauda.component.html
@@ -1,7 +1,7 @@
  <h2 class="heading mb-0">Sauda Master</h2>
 <form [formGroup]="saudaForm" (ngSubmit)="onSubmit(saudaForm.value)" fxLayout="row wrap" class="user-form">
     <div class="white-block pb-5">
-        <h3>Sauda Master Details</h3>
+        <h3><span>Sauda Master Details</span></h3>
         <div class="tab-party-details-parent">
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
               <mat-form-field class="example-full-width" appearance="outline">
