--- a/ClientApp/src/app/Forms/Master/contract-master/contract-master-dialog/add-contract-master.component.html
+++ b/ClientApp/src/app/Forms/Master/contract-master/contract-master-dialog/add-contract-master.component.html
@@ -1,7 +1,7 @@
 <h2 class="heading">Add Contract Master</h2>
 <form [formGroup]="contractForm" (ngSubmit)="onSubmit(contractForm.value)" fxLayout="row wrap" class="user-form">
     <div class="white-block pb-5">
-        <h3>Contract Master</h3>
+        <h3><span>Contract Master</span></h3>
         <div class="tab-party-details-parent">
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field class="example-full-width" appearance="outline">
