--- a/ClientApp/src/app/Forms/Master/item/item-dialog/add-item.component.html
+++ b/ClientApp/src/app/Forms/Master/item/item-dialog/add-item.component.html
@@ -1,7 +1,7 @@
 <h2 class="heading">Add Item</h2>
 <form [formGroup]="itemForm" (ngSubmit)="onSubmit(itemForm.value)" fxLayout="row wrap" class="user-form">
     <div class="white-block pb-5">
-        <h3>Item</h3>
+        <h3><span>Item</span></h3>
         <div class="tab-party-details-parent">
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
               <mat-form-field class="example-full-width" appearance="outline">
