--- a/ClientApp/src/app/Forms/Master/product/product-dialog/add-product.component.html
+++ b/ClientApp/src/app/Forms/Master/product/product-dialog/add-product.component.html
@@ -1,7 +1,7 @@
 <h2 class="heading mb-0">Add Product</h2>
 <form [formGroup]="productForm" (ngSubmit)="onSubmit(productForm.value)" fxLayout="row wrap" class="user-form">
     <div class="white-block pb-5">
-        <h3>Product</h3>
+        <h3><span>Product</span></h3>
         <div class="tab-party-details-parent">
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field class="example-full-width" appearance="outline">
