--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -115,7 +115,7 @@ $material-icons-font-path: '~material-icons/iconfont/';
             font-weight: 500;
         }
         .user-form {
-            padding: 0 15px 15px 15px;
+            padding: 15px;
         }
         .mat-tab-group {
             padding: 0 15px 15px 15px;
