--- a/ClientApp/src/app/Forms/Master/company/company-dialog/add-company.component.html
+++ b/ClientApp/src/app/Forms/Master/company/company-dialog/add-company.component.html
@@ -6,42 +6,28 @@
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field appearance="outline">
                     <mat-label>Name</mat-label>
-                    <input matInput autocomplete="off" placeholder="Name" formControlName="CompanyName" type="text">
-                    <mat-error *ngIf="companyForm.controls.CompanyName.errors?.required">Name is required</mat-error>                
+                    <input matInput autocomplete="off" placeholder="Name" formControlName="name" type="text">
+                    <mat-error *ngIf="companyForm.controls.name.errors?.required">Name is required</mat-error>                
                 </mat-form-field> 
             </div>
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field appearance="outline">
-                    <mat-label>Add</mat-label>
-                    <input matInput autocomplete="off" placeholder="Add" formControlName="add" type="text">
-                    <mat-error *ngIf="companyForm.controls.add.errors?.required">Add is required</mat-error>                
+                    <mat-label>address</mat-label>
+                    <input matInput autocomplete="off" placeholder="address" formControlName="address" type="text">
+                    <mat-error *ngIf="companyForm.controls.address.errors?.required">Address is required</mat-error>                
                 </mat-form-field> 
             </div>
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-                <mat-form-field class="example-full-width" appearance="outline">
+                <mat-form-field appearance="outline">
                     <mat-label>City</mat-label>
-                    <input
-                    matInput
-                    aria-label="CityObj"
-                    [matAutocomplete]="auto3"
-                    [formControl]="cityCtrl"
-                    formControlName="CityName"
-                    />
-                    <mat-error *ngIf="companyForm.controls.CityName.errors?.required">Please select ACGroup</mat-error>                
-                    <mat-autocomplete #auto3="matAutocomplete" (optionSelected)='getSelectedCity($event.option)'>
-                    <mat-option
-                        *ngFor="let cityObj of filteredCity | async"
-                        [value]="cityObj.item2"
-                        [id]="cityObj.item1">
-                        <span>{{cityObj.item2}}</span>
-                    </mat-option>
-                    </mat-autocomplete>
+                    <input matInput autocomplete="off" placeholder="city" formControlName="city" type="text">
+                    <mat-error *ngIf="companyForm.controls.city.errors?.required">City is required</mat-error>                
                 </mat-form-field>
             </div>
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field appearance="outline">
                     <mat-label>Financial Year Begin</mat-label>
-                    <input matInput [matDatepicker]="picker1">
+                    <input matInput [matDatepicker]="picker1" formControlName="finBeginDt">
                     <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                     <mat-datepicker #picker1></mat-datepicker>
                 </mat-form-field>                  
@@ -49,30 +35,16 @@
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field appearance="outline">
                     <mat-label>Financial Year End</mat-label>
-                    <input matInput [matDatepicker]="picker2">
+                    <input matInput [matDatepicker]="picker2" formControlName="finEndDt">
                     <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                     <mat-datepicker #picker1></mat-datepicker>
                 </mat-form-field>                  
             </div>
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-                <mat-form-field class="example-full-width" appearance="outline">
+                <mat-form-field appearance="outline">
                     <mat-label>State</mat-label>
-                    <input
-                    matInput
-                    aria-label="StateObj"
-                    [matAutocomplete]="auto3"
-                    [formControl]="StateCtrl"
-                    formControlName="StateName"
-                    />
-                    <mat-error *ngIf="companyForm.controls.StateName.errors?.required">Please select ACGroup</mat-error>                
-                    <mat-autocomplete #auto3="matAutocomplete" (optionSelected)='getSelectedState($event.option)'>
-                    <mat-option
-                        *ngFor="let StateObj of filteredState | async"
-                        [value]="StateObj.item2"
-                        [id]="StateObj.item1">
-                        <span>{{StateObj.item2}}</span>
-                    </mat-option>
-                    </mat-autocomplete>
+                    <input matInput autocomplete="off" placeholder="state" formControlName="state" type="text">
+                    <mat-error *ngIf="companyForm.controls.state.errors?.required">State is required</mat-error>                
                 </mat-form-field>
             </div>
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
@@ -99,8 +71,8 @@
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field appearance="outline">
                     <mat-label>Unique customer id</mat-label>
-                    <input matInput autocomplete="off" placeholder="Unique customer id" formControlName="uniqueid" type="text">
-                    <mat-error *ngIf="companyForm.controls.uniqueid.errors?.required">Unique customer id is required</mat-error>                
+                    <input matInput autocomplete="off" placeholder="Unique customer id" formControlName="uniqcusomerId" type="text">
+                    <mat-error *ngIf="companyForm.controls.uniqcusomerId.errors?.required">Unique customer id is required</mat-error>                
                 </mat-form-field> 
             </div>
         </div>        
@@ -150,8 +122,8 @@
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50" class="pt-10">
                 <mat-form-field appearance="outline">
                     <mat-label>Settlement Positing in %</mat-label>
-                    <input matInput autocomplete="off" placeholder="" formControlName="SettlementPositing" type="text">
-                    <mat-error *ngIf="companyForm.controls.SettlementPositing.errors?.required">Settlement Positing in % id is required</mat-error>                
+                    <input matInput autocomplete="off" placeholder="" formControlName="settlementPostingInPercentage" type="text">
+                    <mat-error *ngIf="companyForm.controls.settlementPostingInPercentage.errors?.required">Settlement Positing in % id is required</mat-error>                
                 </mat-form-field>
             </div>
         </div>
