--- a/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
@@ -1,7 +1,55 @@
 <div class="row">
-    <div fxLayout="row" class="mt-2 flex-end">
-      <button mat-raised-button color="accent" (click)="openCompanyDialog(null)">
-        <mat-icon>group</mat-icon> Add Brokerage slab
-      </button>
+  <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
+    <div class="dropdown-container">
+      <div class="dropdown-wrapper">
+        <mat-form-field class="select-slab-mat" appearance="outline">
+          <mat-label>Select Branch</mat-label>
+          <mat-select #select  [(ngModel)]="branchIds" multiple placeholder="Select Branch" (selectionChange)="onBranchChange($event)" panelClass="custom-select-panel">
+
+            <mat-option value=0 (click)="branchAllSelection()">Select All</mat-option>
+            <mat-option *ngFor="let option of branchList" [value]="option.id">
+              {{ option.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <div class="dropdown-wrapper">
+        <mat-form-field class="select-slab-mat" appearance="outline">
+          <mat-label>Select Account</mat-label>
+          
+          <mat-select #selectAccount [(ngModel)]="accountIds" multiple placeholder="Select Account" panelClass="custom-select-panel">
+            <mat-option value=0 (click)="accountAllSelection()">Select All</mat-option>
+
+            <mat-option *ngFor="let option of accountList" [value]="option.id">
+              {{ option.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      </div>
+
+
+      <div class="dropdown-container">
+        <div class="dropdown-wrapper">
+          <mat-form-field class="select-slab-mat" appearance="outline">
+            <mat-label>Select Slab</mat-label>
+            <mat-select [(ngModel)]="slabId" placeholder="Select Slab" panelClass="custom-select-panel">
+              <mat-option *ngFor="let option of slabList" [value]="option.id">
+                {{ option.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <button mat-raised-button color="accent" (click)="applySlab(null)">
+          Apply Slab
+        </button>
+
+      </div>
+      <div>
+        <button mat-raised-button color="accent" (click)="addBrokerage(null)">
+          Add Brokerage
+        </button>
+      </div>
     </div>
-</div>  
+  </div>  
