--- a/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
@@ -11,15 +11,15 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <button mat-raised-button color="accent" (click)="openAddSlabDialog(null)">
+      <button mat-raised-button color="accent" (click)="openAddSlabDialog()">
         Add Slab
       </button>
-      <button mat-raised-button class="delete-slab" (click)="openCompanyDialog(null)">
+      <button mat-raised-button class="delete-slab" (click)="openDeleteSlabDialog()">
         Delete Slab
       </button>
     </div>
     <div>
-      <button mat-raised-button color="accent" (click)="openCompanyDialog(null)">
+      <button mat-raised-button color="accent" (click)="openSlabDetailsDialog()">
         Add Slab Details
       </button>
     </div>
