Updated button UI

--- a/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
@@ -11,11 +11,11 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <button mat-raised-button color="accent" (click)="openAddSlabDialog()">
-        Add Slab
+      <button mat-raised-button color="accent" (click)="openAddSlabDialog()" class="icon-btn">
+        <mat-icon>add_circle_outline</mat-icon> Add Slab
       </button>
-      <button mat-raised-button class="delete-slab" (click)="openDeleteSlabDialog()">
-        Delete Slab
+      <button mat-raised-button class="delete-slab icon-btn" (click)="openDeleteSlabDialog()">
+        <mat-icon>delete_outline</mat-icon> Delete Slab
       </button>
     </div>
     <div>
