--- a/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
@@ -4,10 +4,10 @@
       <div class="dropdown-wrapper">
         <mat-form-field class="select-slab-mat" appearance="outline">
           <mat-label>Select Branch</mat-label>
-          <mat-select #select [(ngModel)]="branchIds" multiple placeholder="Select Branch" (selectionChange)="onBranchChange($event)" panelClass="custom-select-panel">
-            <input (keyup)="onKey($event.target.value)" >  
+          <mat-select #select  [(ngModel)]="branchIds" multiple placeholder="Select Branch" (selectionChange)="onBranchChange($event)" panelClass="custom-select-panel">
+            <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search By Provider" (input)="onInputChange($event)"/>
             <mat-option value=0 (click)="branchAllSelection()">Select All</mat-option>
-            <mat-option *ngFor="let option of branchList" [value]="option.id">
+            <mat-option *ngFor="let option of filteredProviders" [value]="option.id">
               {{ option.name }}
             </mat-option>
           </mat-select>
