--- a/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
@@ -52,4 +52,14 @@
         </button>
       </div>
     </div>
+    <div class="col-xl-12 mt-2">
+      <ag-grid-angular style=" height: 535px;"
+                       class="ag-theme-alpine"
+                       [rowData]="brokeragesetupList"
+                       [pagination]="true"
+                       [columnDefs]="columnDefs"
+                       [defaultColDef]="agGridOptions.defaultColDef"
+                       (cellClicked)="onGridClick($event)">
+      </ag-grid-angular>
+    </div>
   </div>  
