--- a/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
@@ -47,7 +47,7 @@
 
       </div>
       <div>
-        <button mat-raised-button color="accent" (click)="addBrokerage(null)">
+        <button mat-raised-button color="accent" (click)="openSlabDetailsDialog(null)">
           Add Brokerage
         </button>
       </div>
