--- a/ClientApp/src/app/Forms/Master/contract-master/contract-master.component.html
+++ b/ClientApp/src/app/Forms/Master/contract-master/contract-master.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="col-xl-12 mt-2">
     <ag-grid-angular style=" height: 535px;"
-                     class="ag-theme-alpine"
+                     class="ag-theme-material"
                      [rowData]="contractList"
                      [pagination]="true"
                      [columnDefs]="columnDefs"
