--- a/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
@@ -26,7 +26,7 @@
   </div>
   <div class="col-xl-12 mt-2">
     <ag-grid-angular style=" height: 535px;"
-                     class="ag-theme-alpine"
+                     class="ag-theme-balham"
                      [rowData]="slabList"
                      [pagination]="true"
                      [columnDefs]="columnDefs"
