--- a/ClientApp/src/app/Forms/Master/account/account.component.html
+++ b/ClientApp/src/app/Forms/Master/account/account.component.html
@@ -8,9 +8,10 @@
   </div>
   <div class="col-xl-12 mt-2">
     <ag-grid-angular style=" height: 520px;"
-                     class="ag-theme-alpine"
+                     class="ag-theme-material"
                      [rowData]="accountList"
                      [pagination]="true"
+                       [rowHeight]="31"
                      [columnDefs]="columnDefs"
                      [defaultColDef]="agGridOptions.defaultColDef"
                      (cellClicked)="onGridClick($event)">
