--- a/ClientApp/src/app/Forms/Master/company/company.component.html
+++ b/ClientApp/src/app/Forms/Master/company/company.component.html
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col-xl-12 mt-2">
     <ag-grid-angular style=" height: 535px;"
-                     class="ag-theme-alpine"
+                    class="ag-theme-material"
+                       [rowHeight]="31"
                      [rowData]="companyList"
                      [pagination]="true"
                      [columnDefs]="columnDefs"
