--- a/ClientApp/src/app/Forms/Master/item/item.component.html
+++ b/ClientApp/src/app/Forms/Master/item/item.component.html
@@ -7,7 +7,8 @@
   </div>
   <div class="col-xl-12 mt-2">
     <ag-grid-angular style=" height: 535px;"
-                     class="ag-theme-alpine"
+                     class="ag-theme-material"
+                       [rowHeight]="31"
                      [rowData]="itemList"
                      [pagination]="true"
                      [columnDefs]="columnDefs"
