--- a/ClientApp/src/app/Forms/Master/sauda/sauda.component.html
+++ b/ClientApp/src/app/Forms/Master/sauda/sauda.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div fxLayout="row" class="mt-2 flex-end">
-    <button mat-raised-button color="accent" (click)="openDialog(null)">
-      <mat-icon>person_add</mat-icon> Add Sauda
+    <button mat-raised-button color="accent" (click)="openDialog(null)" class="icon-btn">
+      <mat-icon>add</mat-icon> Add Sauda
     </button>
   </div>
   <div class="col-xl-12 mt-2">
