--- a/ClientApp/src/app/Forms/Master/account/account.component.html
+++ b/ClientApp/src/app/Forms/Master/account/account.component.html
@@ -2,8 +2,8 @@
 <div class="row">
 
   <div fxLayout="row" class="mt-2 flex-end">
-    <button mat-raised-button color="accent" (click)="openUserDialog(null)">
-      <mat-icon>person_add</mat-icon> Add Account
+    <button mat-raised-button color="accent" (click)="openUserDialog(null)" class="icon-btn">
+      <mat-icon>add</mat-icon> Add Account
     </button>
   </div>
   <div class="col-xl-12 mt-2">
