--- a/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
@@ -47,8 +47,8 @@
 
       </div>
       <div>
-        <button mat-raised-button color="accent" (click)="openSlabDetailsDialog(null)">
-          Add Brokerage
+        <button mat-raised-button color="accent" (click)="openSlabDetailsDialog(null)" class="icon-btn">
+          <mat-icon>add</mat-icon> Add Brokerage
         </button>
       </div>
     </div>
