--- a/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
@@ -19,8 +19,8 @@
       </button>
     </div>
     <div>
-      <button mat-raised-button color="accent" (click)="openSlabDetailsDialog()">
-        Add Slab Details
+      <button mat-raised-button color="accent" (click)="openSlabDetailsDialog()" class="icon-btn">
+        <mat-icon>add</mat-icon> Add Slab Details
       </button>
     </div>
   </div>
