--- a/ClientApp/src/app/Forms/Master/contract-master/contract-master.component.html
+++ b/ClientApp/src/app/Forms/Master/contract-master/contract-master.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div fxLayout="row" class="mt-2 flex-end">
-    <button mat-raised-button color="accent" (click)="openCompanyDialog(null)">
-      <mat-icon>assignment</mat-icon> Add ContractMaster
+    <button mat-raised-button color="accent" (click)="openCompanyDialog(null)" class="icon-btn">
+      <mat-icon>add</mat-icon> Add ContractMaster
     </button>
   </div>
   <div class="col-xl-12 mt-2">
