--- a/ClientApp/src/app/Forms/Master/item/item.component.html
+++ b/ClientApp/src/app/Forms/Master/item/item.component.html
@@ -1,8 +1,8 @@
 
 <div class="row">
   <div fxLayout="row" class="mt-2 flex-end">
-    <button mat-raised-button color="accent" (click)="openUserDialog(null)">
-      <mat-icon>category</mat-icon> Add Item
+    <button mat-raised-button color="accent" (click)="openUserDialog(null)" class="icon-btn">
+      <mat-icon>add</mat-icon> Add Item
     </button>
   </div>
   <div class="col-xl-12 mt-2">
