--- a/ClientApp/src/app/Forms/Master/product/product.component.html
+++ b/ClientApp/src/app/Forms/Master/product/product.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div fxLayout="row" class="mt-2 flex-end">
-    <button mat-raised-button color="accent" (click)="openSaudaDialog(null)">
-      <mat-icon>inventory</mat-icon> Add Product
+    <button mat-raised-button color="accent" (click)="openSaudaDialog(null)" class="icon-btn">
+      <mat-icon>add</mat-icon> Add Product
     </button>
   </div>
   <div class="col-xl-12 mt-2">
