--- a/ClientApp/src/app/pages/pages.component.html
+++ b/ClientApp/src/app/pages/pages.component.html
@@ -47,11 +47,7 @@
                 <router-outlet></router-outlet>
             </div>           
             <div *ngIf="settings.hasFooter" fxLayout="row" fxLayoutAlign="space-between center" class="footer bg-primary">
-                <div>
-                    <a mat-raised-button color="accent" href="https://themeforest.net/item/gradus-angular-5-material-design-admin-template/21241729" target="_blank">
-                        <mat-icon class="mx-2">shopping_cart</mat-icon>Purchase GRADUS
-                    </a>
-                </div>
+                <div></div>
                 <div>
                     <small>Copyright © 2019 All Rights Reserved</small>
                 </div>
