--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -212,6 +212,32 @@ body {
     }
 }
 
+.small-logo {
+    display: flex;
+    img {
+        height: 40px;
+    }
+}
+
+.ag-theme-material {
+    border: 1px solid #ddd;
+    .ag-root-wrapper-body {
+        .ag-header {
+            .ag-header-row {
+                .ag-header-cell {
+                    .ag-header-cell-resize {
+                        background: #ddd;
+                        width: 6px;
+                        height: 50%;
+                        bottom: 0;
+                        margin: auto;
+                    }
+                }
+            }
+        }
+    }
+}
+
 .user-form {
     .mat-tab-group {
         min-width: 100%;
