--- a/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
+++ b/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
@@ -22,7 +22,7 @@
           <div fxFlex="100" fxFlex.gt-sm="28" fxFlex.sm="25">
             <mat-form-field appearance="outline" class="small">
               <mat-label>Opening Bal</mat-label>
-              <input matInput autocomplete="off" placeholder="OpeningBal" formControlName="OpeningBal" type="text">
+              <input matInput autocomplete="off" placeholder="OpeningBal"  formControlName="OpeningBal" type="number">
               <mat-error *ngIf="personalForm.controls.OpeningBal.errors?.required">OpeningBal is required</mat-error>
             </mat-form-field>
             <mat-radio-group formControlName="DrCr">
