--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -446,7 +446,10 @@ body {
     white-space:normal!important;
 
 }
-
+.ag-header-cell-text {
+  font-size:10px;
+  font-weight:700;
+}
 
 
 //ag-row-no-focus ag-row ag-row-level-0 ag-row-position-absolute ag-row-last
