--- a/ClientApp/src/app/Forms/Master/account/account.component.html
+++ b/ClientApp/src/app/Forms/Master/account/account.component.html
@@ -13,7 +13,8 @@
                        [rowHeight]="31"
                      [columnDefs]="columnDefs"
                      [defaultColDef]="agGridOptions.defaultColDef"
-                     (cellClicked)="onGridClick($event)">
+                     (cellClicked)="onGridClick($event)"
+                      headerHeight="34">
     </ag-grid-angular>
   </div>
 </div>
