--- a/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
@@ -61,7 +61,8 @@
                        [columnDefs]="columnDefs"
                        [defaultColDef]="agGridOptions.defaultColDef"
                        (cellClicked)="onGridClick($event)"
-                       (gridReady)="onGridReady($event)">
+                       (gridReady)="onGridReady($event)"
+                        headerHeight="34">
       </ag-grid-angular>
     </div>
   </div>  
