--- a/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
@@ -31,7 +31,8 @@
                      [pagination]="true"
                      [columnDefs]="columnDefs"
                      [defaultColDef]="agGridOptions.defaultColDef"
-                     (cellClicked)="onGridClick($event)">
+                     (cellClicked)="onGridClick($event)"
+                     headerHeight="34">
     </ag-grid-angular>
   </div>
 </div>
