--- a/ClientApp/src/app/Forms/Dialog/confirmation-dialog/confirmation-dialog.component.html
+++ b/ClientApp/src/app/Forms/Dialog/confirmation-dialog/confirmation-dialog.component.html
@@ -1,4 +1,4 @@
-<md-dialog class="error-message">
+<div class="error-message">
   <h1><mat-icon>check_circle_outline</mat-icon> Confirmation</h1>
   <div class="content">
     <mat-dialog-content>
@@ -11,4 +11,5 @@
       <button mat-raised-button color="warn" mat-dialog-close tabindex="-1">{{cancelButtonText}}</button>
     </mat-dialog-actions>
   </div>
-</md-dialog>
+  </div>
+
