--- a/ClientApp/src/app/Forms/Dialog/confirmation-dialog/error-dialog.component.html
+++ b/ClientApp/src/app/Forms/Dialog/confirmation-dialog/error-dialog.component.html
@@ -1,4 +1,4 @@
-<md-dialog class="error-message">
+<div class="error-message">
   <h1><mat-icon>error_outline</mat-icon> Warning</h1>
   <div class="content">
     <mat-dialog-content>
@@ -10,4 +10,4 @@
       <button mat-raised-button color="primary" (click)="onConfirmClick()" tabindex="1">{{confirmButtonText}}</button>  
     </mat-dialog-actions>
   </div>
-</md-dialog>
+</div>
