--- a/ClientApp/src/app/pages/ui/tabs/tabs.component.html
+++ b/ClientApp/src/app/pages/ui/tabs/tabs.component.html
@@ -9,7 +9,7 @@
                     <mat-tab label="Tab 1"><p class="py-1">Vestibulum dapibus ut libero at vestibulum. Donec cursus vitae leo ut bibendum. Pellentesque ac sagittis elit. In hac habitasse platea dictumst. In sed sapien convallis, laoreet dolor at, ullamcorper eros. Vestibulum et urna vel ligula dignissim feugiat. Cras posuere eleifend nisi quis pharetra. Cras nec varius nulla. Morbi quis lacus eget tellus eleifend varius. Sed ornare imperdiet nibh, sed accumsan nisi feugiat facilisis.</p></mat-tab>
                     <mat-tab label="Tab 2"><p class="py-1">Phasellus ac libero malesuada, hendrerit nibh sit amet, porttitor ex. Quisque nec commodo ipsum. Nam id interdum lacus, ac vulputate metus. Mauris congue, nunc in faucibus porta, leo sapien dignissim elit, ac dignissim nunc neque et arcu. Fusce facilisis finibus risus, ac pulvinar sem mattis at. Sed eu tempor justo. Duis pellentesque, leo ut euismod convallis, mi elit vulputate orci, a vestibulum orci erat at nunc. Fusce rutrum eget lacus eget malesuada.</p></mat-tab>
                     <div fxFlex="100" class="p-1 text-center space-between-btns">
-                    <button mat-raised-button color="warn" (click)="close()">Cancel</button>            
+                    <button mat-raised-button color="warn" >Cancel</button>            
                     <button mat-raised-button color="primary" class="uppercase mx-1" type="submit">Save</button> 
                 </div>
                 </mat-tab-group>
