--- a/ClientApp/src/app/Forms/Master/brokerage-setup/add-setup-details/add-setup-details.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/add-setup-details/add-setup-details.component.html
@@ -121,7 +121,7 @@
         </div>
     </div>
     <div fxFlex="100" class="mt-2 text-center space-between-btns">
-        <button mat-raised-button color="warn" (click)="close()">Cancel</button>            
+        <button mat-raised-button color="warn" type="button" (click)="close()">Cancel</button>            
         <button mat-raised-button color="primary" class="uppercase" [disabled]="!itemForm.valid" type="submit">Save</button> 
     </div>
 </form>
