--- a/ClientApp/src/app/pages/landing/landing.component.html
+++ b/ClientApp/src/app/pages/landing/landing.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxLayoutAlign="center center" class="landing-header"> 
-  <p class="logo">GRADUS</p>
+  <p class="logo">Sauda Web</p>
   <p class="intro-text">Angular 13 Material Design Admin Template</p>            
-  <p class="desc m-0">Start creating your app with GRADUS template</p>
+  <p class="desc m-0">Start creating your app with Sauda Web</p>
   <p class="desc"> 8 layouts, 6 color styles, 35+ pages</p>
   <div fxLayout="row" fxLayoutAlign="center center">
      <button mat-raised-button color="primary" (click)="scrollToDemos()">View demos</button>
