--- a/ClientApp/src/app/pages/pages.component.html
+++ b/ClientApp/src/app/pages/pages.component.html
@@ -13,7 +13,7 @@
                         <mat-icon>person</mat-icon>
                     </button> 
                     <a *ngIf="settings.menu == 'horizontal'" mat-raised-button color="accent" routerLink="/" (click)="closeSubMenus()" class="small-logo">G</a>
-                    <a *ngIf="settings.menu == 'horizontal'" class="logo" routerLink="/" (click)="closeSubMenus()">GRADUS</a>  
+                    <a *ngIf="settings.menu == 'horizontal'" class="logo" routerLink="/" (click)="closeSubMenus()">Sauda Web</a>  
                 </div>            
                 <div fxLayout="row" fxLayoutAlign="end center">
                     <div fxLayout="row" fxLayoutAlign="start center" fxShow="false" fxShow.gt-xs class="search-bar">
